fix: z-index for fixed elements

--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -1,7 +1,7 @@
 main > .navigation-container.section {
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 main > .navigation-container.section ~ .section h1,
