--- a/blocks/pdp/pdp.css
+++ b/blocks/pdp/pdp.css
@@ -143,6 +143,7 @@
   border-bottom: 1px solid var(--color-gray-400);
   padding: var(--spacing-80) var(--horizontal-spacing);
   background-color: var(--color-gray-100);
+  z-index: 3;
 }
 
 @media (width >= 900px) {
